// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConcentricMotif hero renders at custom size 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "justifyContent": "center",
        "padding": 16,
      },
      {
        "height": 160,
        "width": 160,
      },
    ]
  }
>
  <Svg
    height={160}
    viewBox="0 0 220 220"
    width={160}
  >
    <Circle
      cx={110}
      cy={110}
      fill="none"
      opacity={0.9}
      r={36}
      stroke="#10B981"
      strokeWidth={2}
      testID="concentric-ring-0"
    />
    <Circle
      cx={110}
      cy={110}
      fill="none"
      opacity={0.9}
      r={36}
      stroke="#10B981"
      strokeWidth={2}
      testID="concentric-ring-1"
    />
    <Circle
      cx={110}
      cy={110}
      fill="none"
      opacity={0.9}
      r={36}
      stroke="#10B981"
      strokeWidth={2}
      testID="concentric-ring-2"
    />
  </Svg>
  <View
    pointerEvents="none"
    style={
      {
        "alignItems": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <Svg
      fill="none"
      height={35}
      viewBox="0 0 24 24"
      width={35}
    >
      <Circle
        cx="10"
        cy="10"
        fill="none"
        r="6"
        stroke="#0A0A0B"
        strokeWidth={3.6458333333333335}
      />
      <Line
        stroke="#0A0A0B"
        strokeLinecap="round"
        strokeWidth={3.6458333333333335}
        x1="14.2"
        x2="20"
        y1="14.2"
        y2="20"
      />
      <Circle
        cx="20"
        cy="20"
        fill="#0A0A0B"
        r={2.1875}
      />
    </Svg>
  </View>
</View>
`;

exports[`ConcentricMotif hero renders default snapshot (3 rings present) 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "center",
        "justifyContent": "center",
        "padding": 16,
      },
      {
        "height": 220,
        "width": 220,
      },
    ]
  }
>
  <Svg
    height={220}
    viewBox="0 0 220 220"
    width={220}
  >
    <Circle
      cx={110}
      cy={110}
      fill="none"
      opacity={0.9}
      r={36}
      stroke="#10B981"
      strokeWidth={2}
      testID="concentric-ring-0"
    />
    <Circle
      cx={110}
      cy={110}
      fill="none"
      opacity={0.9}
      r={36}
      stroke="#10B981"
      strokeWidth={2}
      testID="concentric-ring-1"
    />
    <Circle
      cx={110}
      cy={110}
      fill="none"
      opacity={0.9}
      r={36}
      stroke="#10B981"
      strokeWidth={2}
      testID="concentric-ring-2"
    />
  </Svg>
  <View
    pointerEvents="none"
    style={
      {
        "alignItems": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <Svg
      fill="none"
      height={48}
      viewBox="0 0 24 24"
      width={48}
    >
      <Circle
        cx="10"
        cy="10"
        fill="none"
        r="6"
        stroke="#0A0A0B"
        strokeWidth={5}
      />
      <Line
        stroke="#0A0A0B"
        strokeLinecap="round"
        strokeWidth={5}
        x1="14.2"
        x2="20"
        y1="14.2"
        y2="20"
      />
      <Circle
        cx="20"
        cy="20"
        fill="#0A0A0B"
        r={3}
      />
    </Svg>
  </View>
</View>
`;
